src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

$speed: 6s;

* {
  user-select: none;
  box-sizing: border-box;
}

.word {
  animation: word $speed infinite ease-in-out;

  &:nth-child(0) {
    animation-delay: -6s;
  }

  &:nth-child(1) {
    animation-delay: -3s;
  }

  @keyframes word {
    0%,
    45%,
    100% {
      filter: blur(0px);
      opacity: 1;
    }
    60%,
    90% {
      filter: blur(1em);
      opacity: 0;
    }
  }
}

.wave {
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23050000'/%3E%3C/svg%3E");
  position: absolute;
  width: 200%;
  height: 100%;
  animation: wave 10s -3s linear infinite;
  transform: translate3d(0, 0, 0);
  opacity: 0.8;
}

.wave2 {
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%238bbaf4'/%3E%3C/svg%3E");
  position: absolute;
  width: 200%;
  height: 100%;
  animation: wave 10s -3s linear infinite;
  transform: translate3d(0, 0, 0);
  opacity: 0.8;
}
.wave2:nth-of-type(2),
.wave:nth-of-type(2) {
  bottom: 0;
  animation: wave 18s linear reverse infinite;
  opacity: 0.5;
}
.wave2:nth-of-type(3),
.wave:nth-of-type(3) {
  bottom: 0;
  animation: wave 20s -1s linear infinite;
  opacity: 0.5;
}

@keyframes wave {
  0% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(-25%);
  }
  100% {
    transform: translateX(-50%);
  }
}

.bounce-x {
  animation: x-bouncing 6s linear infinite alternate;
}

.bounce-y {
  animation: y-bouncing 4s linear infinite alternate;
}

@keyframes x-bouncing {
  100% {
    transform: translateX(calc(100vw - 100%));
  }
}

@keyframes y-bouncing {
  100% {
    transform: translateY(calc(100vh - 100%));
  }
}

.text-barbed {
  font-family: 'BARBEDWIRE', sans-serif;
}

.text-sanet {
  font-family: 'ALK Sanet', sans-serif;
}

@font-face {
  font-family: 'BARBEDWIRE';
  src: url('./assets/wiredsaji-68q1-webfont.woff2') format('woff2'),
    url('./assets/wiredsaji-68q1-webfont.woff') format('woff');
  font-weight: 900;
  font-style: normal;
}

.war {
  background-image: url('./assets/war.svg');
  background-position: bottom;
  background-repeat: no-repeat;
}

.tbilisi {
  background-image: url('./assets/tbilisi.svg');
  background-position: bottom;
  background-repeat: no-repeat;
}

.map {
  width: 50%;
  background-image: url(./assets/geo_empty.svg);
  aspect-ratio: 2/1;
  background-position: center;
  // position: absolute;
  background-repeat: no-repeat;
  mix-blend-mode: color-burn;
}

.oligarchy {
  .tick-flip-panel {
    color: red !important;
    font-family: 'BARBEDWIRE', sans-serif;
  }
}

.line-inherit {
  // line-height: initial !important;
}

